k8s/inspect-main-collecting-processing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspect-main-collecting-processing
  labels:
    app: inspect-main-collecting-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inspect-main-collecting-processing
  template:
    metadata:
      labels:
        app: inspect-main-collecting-processing
      name: inspect-main-collecting-processing
    spec:
      containers:
      - name: inspect-main-collecting-processing
        image: inspect-main-collecting-processing
        imagePullPolicy: Never
        ports:
        - containerPort: 9001
      imagePullSecrets:
        - name: myregistrykey
