k8s/inspect-market-collecting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspect-market-collecting
  labels:
    app: inspect-market-collecting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inspect-market-collecting
  template:
    metadata:
      labels:
        app: inspect-market-collecting
      name: inspect-market-collecting
    spec:
      containers:
      - name: inspect-market-collecting
        image: inspect-market-collecting
        imagePullPolicy: Never
        ports:
        - containerPort: 9005
      imagePullSecrets:
        - name: myregistrykey
---
