k8s/inspect-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspect-frontend
  labels:
    app: inspect-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inspect-frontend
  template:
    metadata:
      labels:
        app: inspect-frontend
      name: inspect-frontend
    spec:
      containers:
      - name: inspect-frontend
        image: inspect-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
      imagePullSecrets:
        - name: myregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: inspect-frontend-service
spec:
  selector:
    app: inspect-frontend
  ports:
    - name: inspect-frontend-service
      protocol: TCP
      port: 80 #port of the service
      targetPort: 9000 #port of the pod
