k8s/inspect-main-collecting-processing-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspect-main-collecting-processing-api
  labels:
    app: inspect-main-collecting-processing-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inspect-main-collecting-processing-api
  template:
    metadata:
      labels:
        app: inspect-main-collecting-processing-api
      name: inspect-main-collecting-processing-api
    spec:
      containers:
      - name: inspect-main-collecting-processing-api
        image: inspect-main-collecting-processing-api
        imagePullPolicy: Never
        ports:
        - containerPort: 9002
      imagePullSecrets:
        - name: myregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: inspect-main-collecting-processing-api-service
spec:
  selector:
    app: inspect-main-collecting-processing-api
  ports:
    - name: inspect-main-collecting-processing-api-service
      protocol: TCP
      port: 80 #port of the service
      targetPort: 9002 #port of the pod
