k8s/inspect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspect-ingress
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: nginx
  rules:
    - host: inspect.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inspect-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: inspect-main-collecting-processing-api-service
                port:
                  number: 80
